--- a/docs/3/configuration/_define.yml
+++ b/docs/3/configuration/_define.yml
@@ -30,6 +30,9 @@ details: |+
   `&gt;`                | [**New in v3.9.0!**](/3/change-log/#inspircd-390) A greater than symbol. This can be used unescaped but is supported for compatibility with XML generators.
   `&irc.bold;`          | [**New in v3.9.0!**](/3/change-log/#inspircd-390) Makes subsequent text within an IRC message bold.
   `&irc.color;`         | [**New in v3.9.0!**](/3/change-log/#inspircd-390) Makes subsequent text within an IRC message colored. Should be followed by color codes in the format `FG[,BG]`. See [ircdocs](https://modern.ircdocs.horse/formatting.html#colors) for more information.
+  `&irc.colour;`        | [**New in v3.9.0!**](/3/change-log/#inspircd-390) Makes subsequent text within an IRC message colored. Should be followed by color codes in the format `FG[,BG]`. See [ircdocs](https://modern.ircdocs.horse/formatting.html#colors) for more information.
+  `&irc.hexcolor;`      | [**New in v3.14.0!**](/3/change-log/#inspircd-3140) Makes subsequent text within an IRC message colored. Should be followed by hexadecimal color codes in the format `FRFGFB[,BRBGBB]` (not widely supported).
+  `&irc.hexcolour;`     | [**New in v3.14.0!**](/3/change-log/#inspircd-3140) Makes subsequent text within an IRC message colored. Should be followed by hexadecimal color codes in the format `FRFGFB[,BRBGBB]` (not widely supported).
   `&irc.italic;`        | [**New in v3.9.0!**](/3/change-log/#inspircd-390) Makes subsequent text within an IRC message italic.
   `&irc.monospace;`     | [**New in v3.9.0!**](/3/change-log/#inspircd-390) Makes subsequent text within an IRC message monospace (not widely supported).
   `&irc.reset;`         | [**New in v3.9.0!**](/3/change-log/#inspircd-390) Disables all text formatting for subsequent text.
