--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -1,10 +1,9 @@
-name: Pull request checks
+name: Check docs structure
 on:
   - pull_request
   - push
 jobs:
   build:
-    if: (github.repository == 'inspircd/inspircd-docs' && github.event_name == 'pull_request') || (github.repository != 'inspircd/inspircd-docs' && github.event_name == 'push')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
