Move the relevant parts of the Windows FAQ into the main FAQ.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -173,3 +173,4 @@ plugins:
           3/index.md: index.md
           3/modes.md: 3/channel-modes.md
           4/index.md: index.md
+          faq/windows.md: faq.md
