--- a/docs/3/modules/ssl_gnutls.yml
+++ b/docs/3/modules/ssl_gnutls.yml
@@ -163,7 +163,7 @@ configuration:
     ```
 
 special_notes: |-
-  If you are using a CA-provided certificate and key you will also need to provide a DH parameters file. This file can be generated using `certtool --generate-dh-params --sec-param normal --outfile dhparams.pem` and then be placed in your config directory. You may need to use `gnutls-certtool` instead of `certtool` on macOS and `--bits 2048` instead of `--sec-param normal` on GnuTLS 2.x.
+  If you are using a version of GnuTLS older than 3.6.0 you will also need to provide a DH parameters file. This file can be generated using `certtool --generate-dh-params --sec-param normal --outfile dhparams.pem` and then be placed in your config directory. You may need to use `gnutls-certtool` instead of `certtool` on macOS and `--bits 2048` instead of `--sec-param normal` on GnuTLS 2.x.
 
   TLS (SSL) profiles are not reloaded as part of a normal rehash. If you wish to reload TLS (SSL) profiles you should enable `<gnutls:onrehash>`, use `/REHASH -ssl`, or load [the sslrehashsignal](/3/modules/sslrehashsignal) to allow you to reload TLS (SSL) profiles by sending SIGUSR1 to the InspIRCd process.
 
