--- a/docs/3/commands/_mode.yml
+++ b/docs/3/commands/_mode.yml
@@ -4,7 +4,7 @@ syntax: >-
 description: |-
   Changes the modes which are set on a channel or a user.
 
-  For a list of modes see the [channel modes](/3/channel-modes) and [user modes](/3/user-modes) pages.
+  For a list of modes see the [channel modes](/{{ version }}/channel-modes) and [user modes](/{{ version }}/user-modes) pages.
 example:
 - description: |-
     Sets:
