Make the sql and ssl module tables version generic.

--- a/docs/3/modules/sslinfo.yml
+++ b/docs/3/modules/sslinfo.yml
@@ -103,4 +103,4 @@ commands:
       /SSLINFO #wibble
 
 special_notes: |-
-  {! 3/modules/_ssl_table.md !}
+  {% include "3/modules/_ssl_table.md" %}
