--- a/docs/4/modules/sslinfo.yml
+++ b/docs/4/modules/sslinfo.yml
@@ -88,7 +88,7 @@ commands:
       Views the TLS (SSL) certificate information for Sadie
     text: |-
       /SSLINFO Sadie
-    description: |-
+  - description: |-
       Views the TLS (SSL) certificate information for users in #wibble
     text: |-
       /SSLINFO #wibble
