--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -1,9 +1,20 @@
 name: Deploy the docs site
 on:
   - push
+  - workflow_dispatch
+permissions:
+  contents: read
+  id-token: write
+  pages: write
+concurrency:
+  group: pages
+  cancel-in-progress: true
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - uses: actions/checkout@v3
 
@@ -12,14 +23,21 @@ jobs:
             sudo apt-get install python3-pip python3-setuptools python3-wheel --assume-yes --install-recommends
             sudo pip3 install -r requirements.txt .
 
-      - name: Deploy the docs site
-        if: github.repository == 'inspircd/inspircd-docs' && github.ref == 'refs/heads/master'
-        run: |
-          git config --global user.name "InspIRCd Robot"
-          git config --global user.email "noreply@inspircd.org"
-          mkdocs gh-deploy --force --message 'Update website for docs commit {sha}.' --remote-branch gh-pages --remote-name https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
-
-      - name: Check the docs site
-        if: github.repository != 'inspircd/inspircd-docs' || github.ref != 'refs/heads/master'
+      - name: Build the docs site
         run: |
           mkdocs build
+
+      - name: Upload docs site artifact
+        if: github.ref == 'refs/heads/master'
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: ./site
+
+      - name: Setup GitHub Pages
+        if: github.ref == 'refs/heads/master'
+        uses: actions/configure-pages@v2
+
+      - name: Deploy docs site to GitHub Pages
+        if: github.ref == 'refs/heads/master'
+        id: deployment
+        uses: actions/deploy-pages@v1
