Fix links to IRCv3 specifications.

--- a/docs/3/modules/ircv3_capnotify.yml
+++ b/docs/3/modules/ircv3_capnotify.yml
@@ -4,6 +4,6 @@ description: |-
   This module provides the IRCv3 `cap-notify` client capability.
 
 client_caps:
-- name: '[cap-notify](https://ircv3.net/specs/core/cap-notify-3.2.html)'
+- name: '[cap-notify](https://ircv3.net/specs/extensions/capability-negotiation.html#cap-notify)'
   description: |-
     Notifies users when client capabilities are added or removed.
