--- a/docs/3/modules/cap.yml
+++ b/docs/3/modules/cap.yml
@@ -1,7 +1,7 @@
 name: cap
 
 description: |-
-  This module provides support for [the IRCv3 Client Capability Negotiation extension](https://ircv3.net/specs/core/capability-negotiation.html).
+  This module provides support for [the IRCv3 Client Capability Negotiation extension](https://ircv3.net/specs/extensions/capability-negotiation.html).
 
   This is used by clients to allow the use of modern IRC features without breaking compatibility with older clients.
 
@@ -24,7 +24,7 @@ client_caps:
     Rejects any attempt to request it to avoid clients requesting all available capabilities rather than the ones they support.
 - name: inspircd.org/standard-replies
   description: |-
-    Informs the server that the requesting client is capable of handling arbitrary [standard replies](https://ircv3.net/specs/extensions/standard-replies).
+    Informs the server that the requesting client is capable of handling arbitrary [standard replies](https://ircv3.net/specs/extensions/standard-replies.html).
 
 special_notes: |-
   The `/CAP` command should generally not be executed by users. It is intended to be an entirely internal feature which is executed automatically by clients. Adding and removing capabilities manually may break your client.
