--- a/docs/3/modules/ircv3.yml
+++ b/docs/3/modules/ircv3.yml
@@ -35,12 +35,12 @@ configuration:
     ```
 
 client_caps:
-- name: '[account-notify](https://ircv3.net/specs/extensions/account-notify-3.1.html)'
+- name: '[account-notify](https://ircv3.net/specs/extensions/account-notify.html)'
   description: |-
     Allows the client to be notified when a user's account name changes.
-- name: '[away-notify](https://ircv3.net/specs/extensions/away-notify-3.1.html)'
+- name: '[away-notify](https://ircv3.net/specs/extensions/away-notify.html)'
   description: |-
     Allows the client to be notified when a user's away status changes.
-- name: '[extended-join](https://ircv3.net/specs/extensions/extended-join-3.1.html)'
+- name: '[extended-join](https://ircv3.net/specs/extensions/extended-join.html)'
   description: |-
     Extends the server-to-client JOIN message to include the joining user's account name and real name.
