--- a/docs/3/modules/ircv3_accounttag.yml
+++ b/docs/3/modules/ircv3_accounttag.yml
@@ -4,6 +4,6 @@ description: |-
   This module provides the IRCv3 `account-tag` client capability.
 
 client_caps:
-- name: '[account-tag](https://ircv3.net/specs/extensions/account-tag-3.2.html)'
+- name: '[account-tag](https://ircv3.net/specs/extensions/account-tag.html)'
   description: |-
     Adds an `account` tag with the services account of the sender to all messages.
