--- a/docs/3/modules/ircv3_batch.yml
+++ b/docs/3/modules/ircv3_batch.yml
@@ -4,6 +4,6 @@ description: |-
   This module provides the IRCv3 `batch` client capability.
 
 client_caps:
-- name: '[batch](https://ircv3.net/specs/extensions/batch-3.2.html)'
+- name: '[batch](https://ircv3.net/specs/extensions/batch.html)'
   description: |-
     Adds support for batching multiple messages together.
