--- a/docs/3/modules/ircv3_chghost.yml
+++ b/docs/3/modules/ircv3_chghost.yml
@@ -4,6 +4,6 @@ description: |-
   This module provides the IRCv3 `chghost` client capability.
 
 client_caps:
-- name: '[chghost](https://ircv3.net/specs/extensions/chghost-3.2.html)'
+- name: '[chghost](https://ircv3.net/specs/extensions/chghost.html)'
   description: |-
     Notifies users when the username (ident) or hostname of a user they share a channel with changes.
