--- a/docs/3/modules/ircv3_invitenotify.yml
+++ b/docs/3/modules/ircv3_invitenotify.yml
@@ -4,6 +4,6 @@ description: |-
   This module provides the IRCv3 `invite-notify` client capability.
 
 client_caps:
-- name: '[invite-notify](https://ircv3.net/specs/extensions/invite-notify-3.2.html)'
+- name: '[invite-notify](https://ircv3.net/specs/extensions/invite-notify.html)'
   description: |-
     Notifies users when a user is invited to the channel.
