--- a/docs/3/modules/ircv3_servertime.yml
+++ b/docs/3/modules/ircv3_servertime.yml
@@ -4,6 +4,6 @@ description: |-
   This module provides the IRCv3 `server-time` client capability.
 
 client_caps:
-- name: '[server-time](https://ircv3.net/specs/extensions/server-time-3.2.html)'
+- name: '[server-time](https://ircv3.net/specs/extensions/server-time.html)'
   description: |-
     Adds a `time` tag with the time the message was sent to all messages.
