--- a/docs/3/modules/starttls.yml
+++ b/docs/3/modules/starttls.yml
@@ -21,6 +21,6 @@ configuration:
     ```
 
 client_caps:
-- name: '[tls](https://ircv3.net/specs/extensions/tls-3.1.html)'
+- name: '[tls](https://ircv3.net/specs/extensions/tls.html)'
   description: |-
     Allows plaintext connections to upgrade to TLS (SSL).
