--- a/docs/3/modules/mysql.yml
+++ b/docs/3/modules/mysql.yml
@@ -59,6 +59,13 @@ configuration:
     default: null
     description: |-
       If defined then a custom character set to use with the MySQL server.
+  - name: ssl
+    type: Boolean
+    required: false
+    default: 'No'
+    added: 3.15.0
+    description: |-
+      Whether to connect to the MySQL server using TLS (SSL).
   details: ""
   example: |-
     ```xml
@@ -69,5 +76,6 @@ configuration:
               user="ircd_opers"
               pass="changeme"
               name="inspircd"
-              charset="utf8mb4">
+              charset="utf8mb4"
+              ssl="yes">
     ```
