Add links to the core config from module extensions.

--- a/docs/3/modules/nonicks.yml
+++ b/docs/3/modules/nonicks.yml
@@ -6,7 +6,7 @@ description: |-
 configuration:
 - name: class
   description: |-
-    This module extends the core `<class:privs>` key with the following values:
+    This module extends [the core `<class:privs>` field](/{{ version }}/configuration#class) with the following values:
   extends: true
   added_values:
   - name: channels/ignore-nonicks
