--- a/docs/3/modules/restrictchans.yml
+++ b/docs/3/modules/restrictchans.yml
@@ -44,7 +44,7 @@ configuration:
     ```
 - name: class
   description: |-
-    This module extends the core `<class:privs>` key with the following values:
+    This module extends [the core `<class:privs>` field](/{{ version }}/configuration#class) with the following values:
   extends: true
   added_values:
   - name: channels/restricted-create
