--- a/docs/4/modules/deaf.yml
+++ b/docs/4/modules/deaf.yml
@@ -35,7 +35,7 @@ configuration:
     ```
 - name: class
   description: |-
-    This module extends the core `<class:privs>` key with the following values:
+    This module extends [the core `<class:privs>` field](/4/configuration#class) with the following values:
   extends: true
   added_values:
   - name: users/ignore-privdeaf
