Mark more tags as extending the core tags.

--- a/docs/3/modules/cgiirc.yml
+++ b/docs/3/modules/cgiirc.yml
@@ -109,6 +109,7 @@ configuration:
 - name: connect
   description: |-
     This module extends [the core `<connect>` tags](/3/configuration#connect) with the following fields:
+  extends: true
   attributes:
   - name: webirc
     type: Text
