--- a/docs/3/modules/spanningtree.yml
+++ b/docs/3/modules/spanningtree.yml
@@ -154,6 +154,7 @@ configuration:
 - name: options
   description: |-
     This module extends [the core `<options>` tag](/3/configuration#options) with the following fields:
+  extends: true
   attributes:
   - name: allowmismatch
     type: Boolean
@@ -191,6 +192,7 @@ configuration:
 - name: performance
   description: |-
     This module extends [the core `<performance>` tag](/3/configuration#performance) with the following fields:
+  extends: true
   attributes:
   - name: quietbursts
     type: Boolean
@@ -207,6 +209,7 @@ configuration:
 - name: security
   description: |-
     This module extends [the core `<security>` tag](/3/configuration#security) with the following fields:
+  extends: true
   attributes:
   - name: flatlinks
     type: Boolean
