--- a/docs/4/modules/connectban.yml
+++ b/docs/4/modules/connectban.yml
@@ -7,6 +7,7 @@ configuration:
 - name: connect
   description: |-
     This module extends [the core `<connect>` tags](/4/configuration#connect) with the following fields:
+  extends: true
   attributes:
   - name: useconnectban
     type: Boolean
