--- a/docs/4/modules/gateway.yml
+++ b/docs/4/modules/gateway.yml
@@ -92,6 +92,7 @@ configuration:
 - name: connect
   description: |-
     This module extends [the core `<connect>` tags](/4/configuration#connect) with the following fields:
+  extends: true
   attributes:
   - name: webirc
     type: Text
