--- a/docs/3/modules/randquote.yml
+++ b/docs/3/modules/randquote.yml
@@ -39,7 +39,7 @@ configuration:
     required: false
     default: quotes
     description: |-
-      The name of the field in &lt;files&gt; / &lt;execfiles&gt; to use when reading the quotes.
+      The file path or name of the field in &lt;files&gt; / &lt;execfiles&gt; to use when reading the quotes.
   - name: prefix
     type: Text
     required: false
