--- a/docs/3/modules/showfile.yml
+++ b/docs/3/modules/showfile.yml
@@ -19,7 +19,7 @@ configuration:
     required: true
     default: null
     description: |-
-      The name of the field in `&lt;files&gt;` / `&lt;execfiles&gt;` to use when reading the file.
+      The file path or name of the field in `&lt;files&gt;` / `&lt;execfiles&gt;` to use when reading the file.
   - name: method
     type: Text
     required: false
